--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -180,6 +180,7 @@
     padding-bottom: 300px;
     max-width: 300px;
 	opacity: .2;
+	transform: translate3d(0,0,0);
     transition: opacity .5s;
 }
 
