--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -6,8 +6,8 @@
 /* colors defined in variables.css */
 :root {
 	/* font */
-	--sans: "National 2 Web", -apple-system, BlinkMacSystemFont, Helvetica, Arial, sans-serif;
-	--serif: "Tiempos Text Web", Iowan Old Style, Times New Roman, Times, serif;
+	--sans: "Inter", -apple-system, BlinkMacSystemFont, Helvetica, Arial, sans-serif;
+	--serif: Iowan Old Style, Times New Roman, Times, serif;
 	--mono: Menlo, Consolas, Monaco, monospace;
 
 	/* z-index */
@@ -216,6 +216,12 @@
 .big {
 	font-size: 28px;
 	color: #ddd;
+	text-transform: uppercase;
+    font-weight: 600;
+    letter-spacing: -2px;
+    font-size: 45px;
+    line-height: 1;
+    color: white;
 }
 
 .emphasis {
