update github pages

--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -23,7 +23,7 @@
 	--color-bg: #feefd7;
 	--color-bg: #161616;
 	--color-fg: #FF0000;
-	--color-fg: #9f9e9f;
+	--color-fg: #c8c8c8;
 	--color-primary: var(--color-black);
 	--color-link: var(--color-black);
 	--color-focus: var(--color-red);
